--- a/index.html
+++ b/index.html
@@ -4,40 +4,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" href="./img/icon.png">
-
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="./css/style.css">
-
-        <title>My Hub</title>
+        <title>Hitanshu Dalwadi</title>
     </head>
-
-    <body class="landing-page">
-            <div class="center-align">
-                <!--<h1 class="title">My Hub</h1>-->
-
-                <img id="siteLogo" src="./img/Untitled_Artwork.png" style="max-width: 40vw; padding-top: 34vh">
-
-                <p><strong>Organize yourself. Work efficiently. Perform Outstandingly.</strong></p>
-
-                <form action="main.html"> <!-- input redirect page here -->
-                    <input class="p-1" id="name" type="text" placeholder="Your Name" style="text-align: center;" required>
-                    
-                    <br>
-
-                    <!-- button below should pass the name to the main js function -->
-                    <button class="btn btn-outline-dark" id="getstarted" style="margin: 15px" onclick="getName()" >Get Started!</button>
-
-
-
-                </form>
-
-            </div>
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="js/script.js"></script>
-</body>
+    <body>
+        
+    </body>
 </html> 
